# VideoCastConverter

./: CMakeLists.txt  Task.md  main.cpp
videoplayer/: videoplayer.h
videoplayer/source/: constructor_videoplayer.cpp  controller_videoplayer.cpp  setUI_videoplayer.cpp
videostreamer/: videostreamer.h
videostreamer/source/: build_pipeline.cpp  constructor_desctructor.cpp  determine_device.cpp  pipeline_controller.cpp
